fix: prevent bad positioning in text overflow with big texts in work space

--- a/apps/web/src/app/modules/board/components/node-toolbar/node-toolbar.component.scss
+++ b/apps/web/src/app/modules/board/components/node-toolbar/node-toolbar.component.scss
@@ -3,7 +3,7 @@
 }
 
 tapiz-toolbar {
-  position: absolute;
+  position: fixed;
   z-index: var(--board-tools-layer);
   inset-inline-start: 70px;
   inset-block-start: 70px;
